@@ -9,7 +9,7 @@ neogradle.subsystems.parchment.mappingsVersion=2023.12.31
 # Environment Properties
 minecraft_version=1.20.4
 minecraft_version_range=[1.20.4,1.21)
-neo_version=20.4.180
+neo_version=20.4.237
 neo_version_range=[20.4,)
 loader_version_range=[2,)
 
